force-app/main/default/objects/Product_Line__c/fields/Altcode__c.field-meta.xml
<CustomField>
    <fullName>Altcode__c</fullName>
    <description>Feed Outbound</description>
    <formula>Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Altcode</label>
    <type>Text</type>
</CustomField>