force-app/main/default/objects/Product_Line__c/fields/Code__c.field-meta.xml
<CustomField>
    <fullName>Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Product Line Code</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>