force-app/main/default/objects/Product_Line__c/fields/DisplayDescription__c.field-meta.xml
<CustomField>
    <fullName>DisplayDescription__c</fullName>
    <description>Feed Outbound.</description>
    <formula>Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Display Description</label>
    <type>Text</type>
</CustomField>