force-app/main/default/objects/Product_Line__c/fields/Documents__c.field-meta.xml
<CustomField>
    <fullName>Documents__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Trace Code Error Document</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>