force-app/main/default/objects/Product_Line__c/fields/isValidDateCode__c.field-meta.xml
<CustomField>
    <fullName>isValidDateCode__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Display Date Code on Issue</label>
    <type>Checkbox</type>
</CustomField>