force-app/main/default/objects/Product_Line__c/fields/Op_Company__c.field-meta.xml
<CustomField>
    <fullName>Op_Company__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>OpCo</label>
    <referenceTo>Operating_Company__c</referenceTo>
    <relationshipLabel>Product Lines</relationshipLabel>
    <relationshipName>Product_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>