force-app/main/default/objects/Product_Line__c/fields/Trace_Code_Location__c.field-meta.xml
<CustomField>
    <fullName>Trace_Code_Location__c</fullName>
    <label>Trace Code Location</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CAN</fullName>
            </value>
            <value>
                <fullName>CAR</fullName>
            </value>
            <value>
                <fullName>Carton</fullName>
            </value>
            <value>
                <fullName>CAS</fullName>
            </value>
            <value>
                <fullName>KIT</fullName>
            </value>
            <value>
                <fullName>PAC</fullName>
            </value>
            <value>
                <fullName>Pack</fullName>
            </value>
            <value>
                <fullName>SPRAY BOTTLE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>