force-app/main/default/objects/Product_Line__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>isActive__c</columns>
    <columns>Code__c</columns>
    <columns>isValidDateCode__c</columns>
    <columns>Operating_Company__c</columns>
    <columns>Trace_Code_Location__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>Altcode__c</columns>
    <columns>Op_Company__c</columns>
    <columns>FeedSend__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>